Fix layout issue

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -132,26 +132,25 @@
     position: relative;
     top: 95px;
     margin: 0 auto;
-    width: 90%;
+    max-width: 77%;
     &-title {
       display: flex;
-      overflow: hidden;
+      justify-content: space-around;
       &-text {
-        position: relative;
-        left: 130px;
-        width: 273px;
+        width: 355px;
         font-family: $navfont;
         font-size: 33px;
         color: $purple;
-        margin-right: 18px;
+        margin-right: 10px;
       }
       &-line {
-        position: relative;
         align-self: center;
-        left: 130px;
-        width: 70%;
+        width: 90%;
         border-bottom: 5px solid $purple;
       }
+    }
+    &-top {
+
     }
   }
 }
